Fixed some issues regarding the z-index situation.

--- a/src/css/navbar_style.css
+++ b/src/css/navbar_style.css
@@ -102,6 +102,7 @@ svg
         bottom: 0;
         width: 100%;
         height: 5.5rem;
+        padding-bottom: 10px;
     }
 
     .self_nav-link-logo
